--- a/css/main.css
+++ b/css/main.css
@@ -264,15 +264,15 @@ a:active {
             transform: perspective(600px) rotateY(0deg);
   }
   20% {
-    background: #4B0082;
+    background: #fff;
   }
   29.9% {
-    background: #4B0082;
+    background: #fff;
   }
   30% {
     -webkit-transform: perspective(200px) rotateY(-90deg);
             transform: perspective(200px) rotateY(-90deg);
-    background: #4B0082;
+    background: #fff;
   }
   54.999% {
     opacity: 1;
@@ -283,12 +283,12 @@ a:active {
   60% {
     -webkit-transform: perspective(200px) rotateY(-180deg);
             transform: perspective(200px) rotateY(-180deg);
-    background: #4B0082;
+    background: #fff;
   }
   100% {
     -webkit-transform: perspective(200px) rotateY(-180deg);
             transform: perspective(200px) rotateY(-180deg);
-    background: #4B0082;
+    background: #fff;
   }
 }
 
@@ -298,15 +298,15 @@ a:active {
             transform: perspective(600px) rotateY(0deg);
   }
   20% {
-    background: #4B0082;
+    background: #fff;
   }
   29.9% {
-    background: #4B0082;
+    background: #fff;
   }
   30% {
     -webkit-transform: perspective(200px) rotateY(-90deg);
             transform: perspective(200px) rotateY(-90deg);
-    background: #4B0082;
+    background: #fff;
   }
   54.999% {
     opacity: 1;
@@ -317,12 +317,12 @@ a:active {
   60% {
     -webkit-transform: perspective(200px) rotateY(-180deg);
             transform: perspective(200px) rotateY(-180deg);
-    background: #4B0082;
+    background: #fff;
   }
   100% {
     -webkit-transform: perspective(200px) rotateY(-180deg);
             transform: perspective(200px) rotateY(-180deg);
-    background: #4B0082;
+    background: #fff;
   }
 }
 
