--- a/css/main.css
+++ b/css/main.css
@@ -867,8 +867,8 @@ opacity: 0.9;
 
 .whatsapp-float {
     position: fixed;
-    bottom: 20px;
-    right: 20px;
+    bottom: 30px;
+    right: 30px;
     background-color: #25d366;
     color: #fff;
     width: 60px;
@@ -887,6 +887,23 @@ opacity: 0.9;
 
 .whatsapp-float:hover {
     background-color: #128c7e;
+}
+
+.notification {
+    position: absolute;
+    top: -5px; /* Posiciona a bolinha acima do ícone */
+    right: -5px; /* Posiciona a bolinha à direita do ícone */
+    background-color: #ff0000; /* Cor vermelha */
+    color: #fff; /* Cor do número */
+    width: 20px;
+    height: 20px;
+    border-radius: 50%; /* Deixa a bolinha redonda */
+    font-size: 12px;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
 
 .whatsapp-tooltip {
